--- a/4_CSS_REACT/css/src/components/Mycomponent.css
+++ b/4_CSS_REACT/css/src/components/Mycomponent.css
@@ -8,3 +8,13 @@ p{
     color: yellow;
     font-size: 20px;
 }
+
+.title{
+    color: purple;
+    font-size: 40px;
+}
+
+.redtitle{
+    color: red;
+    font-size: 25px;
+}
